changes to  WEB page For a Better tommorow

--- a/3-testimonials.html
+++ b/3-testimonials.html
@@ -10,7 +10,7 @@
 
     <link href="ASSETS/css/vanilla.css" rel="stylesheet" />
     <title>
-        45|STDioS - Home
+        45|STDioS - Testimonials
     </title>
     <link rel="icon" type="image/x-icon" href="ASSETS/css/Untitled design.jpg" />
 
