--- a/5-contactus.html
+++ b/5-contactus.html
@@ -207,11 +207,15 @@
                     <p><strong>Email:</strong> <a href="mailto:anandhukrishne@gmail.com">anandhukrishne@gmail.com</a>
                     </p>
                     <p><strong>Phone:</strong> <a href="tel:+918320382088">+91 8320382088</a></p>
-                    <p><strong>Address:</strong>123/F, GautamNagar, NR. Chitra P.O., Bhavnagar, Gujarat, India-364004
-                    </p>
+                    <p><address><strong>Address(Gujarat Branch):</strong>Plot no:123/F, GautamNagar, NR. Chitra P.O., Bhavnagar, Gujarat, India-364004
+                    </address></p>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d59286.95324238515!2d72.11305085752147!3d21.763435569399135!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjHCsDQ0JzUyLjkiTiA3MsKwMDUnMjQuNiJF!5e0!3m2!1sen!2sin!4v1764085389458!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    <p><strong>Website:</strong> <a href="https://45-studios.github.io/Web/"
-                            target="_blank">45stdios.github.io/Web</a></p>
+                    <p><strong>Website:</strong> 
+                         <p><address><strong>Address(Kerala Branch):</strong>45|STDioS, Behind Glidemaster Steel City, Vadakkadathukavu, Adoor, Kerala, India-691523 
+                    </address></p>
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d984.8142373016342!2d76.73973008199188!3d9.131249247729212!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1764136869500!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                        
+                    <p><strong>Website :</strong><a href="https://45-studios.github.io/Web/"
+                            target="_blank">https://45stdios.github.io/Web</a></p>
                     <p><strong>Working Hours:</strong> Monday to Friday, 9:00 AM - 6:00 PM IST</p>
                 </div>
             </div>
