--- a/index.html
+++ b/index.html
@@ -202,6 +202,16 @@
         </div>
     </div>
 </footer>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9857331162482604"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-da-6+9y-lr+37"
+     data-ad-client="ca-pub-9857331162482604"
+     data-ad-slot="9995671134"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 </html>
